--- a/fims/src/main/resources/application.yaml
+++ b/fims/src/main/resources/application.yaml
@@ -1,4 +1,8 @@
 spring:
+    datasource:
+        url: "jdbc:mysql://127.0.0.1:3306/fims"
+        username: "root"
+        password: "123456"
     devtools:
         restart:
             enabled: true  # 设置开启热部署
