--- a/fims/build.gradle
+++ b/fims/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation "io.springfox:springfox-boot-starter:3.0.0"
 	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+	implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.0"
 }
 
 tasks.named('bootBuildImage') {
